<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_7">



    <TextView
        android:id="@+id/chocolates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_chocolates"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/Kitkat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="Kitkat"/>
    <CheckBox
        android:id="@+id/DairyMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="DairyMilk"/>
    <CheckBox
        android:id="@+id/Snickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="Snickers"/>
    <CheckBox
        android:id="@+id/Ferrero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Ferrero"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Chocolates Types:"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/darkchocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="Dark chocolate  Tk 200"/>
        <RadioButton
            android:id="@+id/silkchocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="Silk chocolate    Tk 160" />
        <RadioButton
            android:id="@+id/whitechocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="White chocolste  Tk 120"/>

    </RadioGroup>




    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/decrement"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#2F1E3031"
            android:text="-"
            android:textSize="25sp"
            />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"
            />
        <Button
            android:id="@+id/increment"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#2F1E3031"
            android:text="+"
            android:textSize="25sp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_bdt_0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            android:progressTint="#D7AD2F"
            android:progressBackgroundTint="#41525050"
            />
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/rating_0_0"
            />
    </LinearLayout>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#CC114C"
        android:text="@string/place_order" />

</LinearLayout>


